--- a/UpdateFile/test.html
+++ b/UpdateFile/test.html
@@ -25,7 +25,7 @@
 <body>
   <h1>正在檢查作業系統...11</h1>
   <p id="loading">請稍候，正在準備啟動安裝程式</p>
-  <p id="error">此作業系統不支援啟動安裝程式，請在 Windows 環境中開啟。</p>
+  <p id="error">oho ho此作業系統不支援啟動安裝程式，請在 Windows 環境中開啟。</p>
 
   <script>
     // 自訂協定
