--- a/UpdateFile/testNew.html
+++ b/UpdateFile/testNew.html
@@ -130,7 +130,7 @@
 
     // ✅ 非 Windows 的按鈕（隱藏連結內容）
     helpBtn.addEventListener("click", () => {
-      window.location.assign("https://www.google.com");
+      window.location.assign("https://money-statistics.gitbook.io/money-statistics-installer/");
     });
 
     // ✅ 系統判斷邏輯
